# openapi-cpp-restbed

./: .gitignore  .travis.yml  CMakeLists.txt  gen_code.sh  openapi-generator-cli.sh  petstore.yaml
.circleci/: config.yml
cpp_restbed_server_custom_templates/: api-header.mustache  api-source.mustache  model-header.mustache  model-source.mustache
pistache/: CMakeLists.txt  dependencies.cmake
restbed/: CMakeLists.txt  dependencies.cmake
restbed/test/: CMakeLists.txt  api_response_model_test.cpp  category_model_test.cpp  main.cpp  order_model_test.cpp  pet_model_test.cpp  tag_model_test.cpp  user_model_test.cpp
restbed/test/api_tests/: CMakeLists.txt  beast_client.cpp  beast_client.h  store_api_test.cpp
restbed/test/java_client_tests/: CMakeLists.txt  defaultUnimplementedServerStubs.cmake  run_java_client_tests_template.txt
restbed/test/java_client_tests/java_client/: build.gradle
restbed/test/java_client_tests/java_client/src/test/java/helper/: ApiClientFactories.java  TestingHelper.java
restbed/test/java_client_tests/java_client/src/test/java/test_default_server_stubs/: FirstTest.java
restbed/test/java_client_tests/java_client/src/test/java/test_default_unimplemented_server_stubs/: PackageSettings.java  PetApiTest.java  StoreApiTest.java  TestingHelper.java  UserApiTest.java
restbed/test/java_client_tests/java_client/src/test/java/test_default_unimplemented_server_stubs/approval_files/: StoreApiTest.getInventory.approved.txt  UserApiTest.createUsersWithListInput.approved.txt  UserApiTest.deleteUser.approved.txt
restbed/test/java_client_tests/java_client/src/test/java/test_error_handling_server_stubs/: PackageSettings.java  PetApiTest.java  StoreApiTest.java  UserApiTest.java
restbed/test/java_client_tests/java_client/src/test/java/test_error_handling_server_stubs/approval_files/: PetApiTest.addPetThatReturnsStatus200.approved.txt  PetApiTest.addPetThatThrowsInt.approved.txt  PetApiTest.addPetThatThrowsPetApiException.approved.txt  PetApiTest.deletePetReturnsStatus400.approved.txt  PetApiTest.deletePetThrowsStdExceptionDerivedException.approved.txt  PetApiTest.getPetByIdReturnsStatus404.approved.txt  PetApiTest.updatePetReturnsStatus405.approved.txt  PetApiTest.updatePetReturnsStatus500.approved.txt  StoreApiTest.deleteOrderReturnsStatus400.approved.txt  StoreApiTest.deleteOrderReturnsStatus405.approved.txt  StoreApiTest.getOrderByIdReturnsStatus404.approved.txt  StoreApiTest.placeOrderReturnsStatus400.approved.txt  UserApiTest.createUsersWithListInputReturnsStatus400.approved.txt  UserApiTest.loginUserReturnsStatus400.approved.txt
restbed/test/java_client_tests/java_client/src/test/java/test_simple_server_stubs/: PackageSettings.java  PetApiTest.java  StoreApiTest.java  UserApiTest.java
restbed/test/java_client_tests/java_client/src/test/java/test_simple_server_stubs/approval_files/: StoreApiTest.getOrderById.approved.txt  StoreApiTest.placeOrder.approved.txt
restbed/test/java_client_tests/tests_servers/: CMakeLists.txt
restbed/test/java_client_tests/tests_servers/default_handlers/: CMakeLists.txt  main.cpp
restbed/test/java_client_tests/tests_servers/default_unimplemented_server_stubs/: CMakeLists.txt  main.cpp
restbed/test/java_client_tests/tests_servers/error_handling_server_stubs/: CMakeLists.txt  main.cpp
restbed/test/java_client_tests/tests_servers/simple_server_stubs/: CMakeLists.txt  main.cpp
restbed/test/model_tests/: CMakeLists.txt  api_response_model_test.cpp  category_model_test.cpp  main.cpp  order_model_test.cpp  pet_model_test.cpp  tag_model_test.cpp  user_model_test.cpp
